--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Reflect"
         tools:targetApi="31">
         <activity
+            android:name=".ui.settings.DevelopersContact"
+            android:exported="false" />
+        <activity
             android:name=".ui.journal.ExpandedJournalActivity"
             android:exported="false" />
         <activity
